--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha server/**/*.test.js",
+    "start": "node server/server.js",
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec npm test"
+  },
+  "engines": {
+    "node": "7.10.1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
+    "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.31",
-    "mongoose": "^4.12.0"
+    "mongoose": "^4.12.0",
+    "validator": "^9.1.1"
   },
   "devDependencies": {
     "expect": "^1.20.2",
